--- a/src/views/main_board/main.fxml
+++ b/src/views/main_board/main.fxml
@@ -14,7 +14,7 @@
          <left>
               <AnchorPane minHeight="-Infinity" prefHeight="652.0" prefWidth="263.0" style="-fx-background-color: #ffce44; -fx-border-color: black;" BorderPane.alignment="CENTER">
                   <children>
-                  <Button id="button1" alignment="BASELINE_LEFT" layoutX="6.0" layoutY="208.0" mnemonicParsing="false" onAction="#handleHogiadinh" prefHeight="62.0" prefWidth="250.0" stylesheets="@../../static/css/main.css" text="Hộ gia đình" textFill="WHITE">
+                  <Button alignment="BASELINE_LEFT" layoutX="6.0" layoutY="208.0" mnemonicParsing="false" onAction="#handleHogiadinh" prefHeight="62.0" prefWidth="250.0" styleClass="login" stylesheets="@../../static/css/main.css" text="Hộ gia đình" textFill="WHITE">
                      <graphic>
                         <ImageView fitHeight="24.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -29,7 +29,7 @@
                         <Insets left="50.0" />
                      </padding>
                   </Button>
-                  <Button id="button1" alignment="BASELINE_LEFT" layoutX="7.0" layoutY="352.0" mnemonicParsing="false" onAction="#handleThongke" prefHeight="62.0" prefWidth="250.0" stylesheets="@../../static/css/main.css" text="Thống kê" textFill="WHITE">
+                  <Button alignment="BASELINE_LEFT" layoutX="7.0" layoutY="352.0" mnemonicParsing="false" onAction="#handleThongke" prefHeight="62.0" prefWidth="250.0" styleClass="login" stylesheets="@../../static/css/main.css" text="Thống kê" textFill="WHITE">
                      <graphic>
                         <ImageView fitHeight="24.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -44,7 +44,7 @@
                         <Insets left="50.0" />
                      </padding>
                   </Button>
-                  <Button id="button1" alignment="BASELINE_LEFT" layoutX="7.0" layoutY="280.0" mnemonicParsing="false" onAction="#handlePhatqua" prefHeight="62.0" prefWidth="250.0" stylesheets="@../../static/css/main.css" text="Phát quà" textFill="WHITE">
+                  <Button alignment="BASELINE_LEFT" layoutX="7.0" layoutY="280.0" mnemonicParsing="false" onAction="#handlePhatqua" prefHeight="62.0" prefWidth="250.0" styleClass="login" stylesheets="@../../static/css/main.css" text="Phát quà" textFill="WHITE">
                      <graphic>
                         <ImageView fitHeight="24.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -59,7 +59,7 @@
                         <Insets left="50.0" />
                      </padding>
                   </Button>
-                  <Button id="button1" alignment="BASELINE_LEFT" contentDisplay="RIGHT" layoutX="41.0" layoutY="426.0" mnemonicParsing="false" onAction="#handleLogOut" prefHeight="62.0" prefWidth="181.0" stylesheets="@../../static/css/main.css" text="Đăng xuất" textAlignment="CENTER" textFill="WHITE">
+                  <Button alignment="BASELINE_LEFT" contentDisplay="RIGHT" layoutX="27.0" layoutY="425.0" mnemonicParsing="false" onAction="#handleLogOut" prefHeight="62.0" prefWidth="207.0" styleClass="login" stylesheets="@../../static/css/main.css" text="Đăng xuất" textAlignment="CENTER" textFill="WHITE">
                      <font>
                         <Font size="18.0" />
                      </font>
