--- a/src/views/phatqua/hocsinh/phatquaHocsinh.fxml
+++ b/src/views/phatqua/hocsinh/phatquaHocsinh.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="651.0" prefWidth="802.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.HocSinhController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="651.0" prefWidth="818.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.HocSinhController">
     <children>
         <GridPane layoutX="10.0" layoutY="1.0" prefHeight="651.0" prefWidth="782.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
             <columnConstraints>
@@ -25,24 +25,24 @@
             <children>
                 <HBox alignment="CENTER_LEFT" prefHeight="99.0" prefWidth="779.0" spacing="10.0">
                     <children>
-                        <TextField prefHeight="31.0" prefWidth="222.0" promptText="Tìm kiếm học sinh" style="-fx-border-color: #1E8CCE;" />
-                        <ComboBox fx:id="cbbHocSinh" prefHeight="31.0" prefWidth="116.0" promptText="Mã học sinh" style="-fx-background-color: #ffffff; -fx-border-color: #1E8CCE;" />
-                        <Button mnemonicParsing="false" prefHeight="34.0" prefWidth="90.0" stylesheets="@../../../static/css/main.css" text="Tìm kiếm " textFill="WHITE">
+                        <TextField prefHeight="47.0" prefWidth="214.0" promptText="Tìm kiếm học sinh" style="-fx-border-color: black;" styleClass="search" stylesheets="@../../../static/css/main.css" />
+                        <ComboBox fx:id="cbbHocSinh" prefHeight="47.0" prefWidth="116.0" promptText="Tên" style="-fx-border-color: black; -fx-background-color: #ffffff;" styleClass="search" stylesheets="@../../../static/css/main.css" />
+                        <Button mnemonicParsing="false" prefHeight="47.0" prefWidth="102.0" styleClass="small_button" stylesheets="@../../../static/css/main.css" text="Tìm kiếm " textFill="WHITE">
                             <font>
                                 <Font size="14.0" />
                             </font>
                         </Button>
-                        <Button mnemonicParsing="false" prefHeight="34.0" prefWidth="87.0" stylesheets="@../../../static/css/main.css" text="Phát quà" textFill="WHITE">
+                        <Button mnemonicParsing="false" prefHeight="47.0" prefWidth="87.0" styleClass="small_button" stylesheets="@../../../static/css/main.css" text="Phát quà" textFill="WHITE">
                             <font>
                                 <Font size="14.0" />
                             </font>
                         </Button>
-                  <Button mnemonicParsing="false" prefHeight="34.0" prefWidth="121.0" stylesheets="@../../../static/css/main.css" text="Phát quà tất cả" textFill="WHITE">
+                  <Button mnemonicParsing="false" prefHeight="47.0" prefWidth="133.0" styleClass="small_button" stylesheets="@../../../static/css/main.css" text="Phát quà tất cả" textFill="WHITE">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="34.0" prefWidth="87.0" stylesheets="@../../../static/css/main.css" text="Undo" textFill="WHITE">
+                  <Button mnemonicParsing="false" prefHeight="47.0" prefWidth="87.0" styleClass="small_button" stylesheets="@../../../static/css/main.css" text="Undo" textFill="WHITE">
                      <font>
                         <Font size="14.0" />
                      </font>
@@ -57,7 +57,7 @@
                   <TableColumn prefWidth="100.79998779296875" text="Ngày sinh" />
                   <TableColumn minWidth="4.0" prefWidth="79.20001220703125" text="Con chủ hộ" />
                   <TableColumn minWidth="0.0" prefWidth="226.39996337890625" text="Địa chỉ" />
-                  <TableColumn prefWidth="103.2000732421875" text="Số điện thoại" />
+                  <TableColumn prefWidth="118.40006103515623" text="Số điện thoại" />
               </columns>
             </TableView>
             </children>
