--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -2,6 +2,10 @@
     -fx-background-radius: 10px;
 }
 
+.table-view{
+    -fx-border-color: black;
+}
+
 .button{
     -fx-font-weight: bold;
     -fx-border-color: black;
@@ -32,6 +36,8 @@
 .search{
     -fx-font-size: 14px;
     -fx-font-weight: bold;
+    -fx-background-color: #ffffff;
+    -fx-border-color: black;
 }
 
 .small_button{
