--- a/src/views/phatqua/PhatQua.fxml
+++ b/src/views/phatqua/PhatQua.fxml
@@ -7,17 +7,21 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="651.0" prefWidth="802.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
     <children>
-          <Button layoutX="48.0" layoutY="102.0" mnemonicParsing="false" onAction="#handleThieuNhi" prefHeight="421.0" prefWidth="316.0" stylesheets="@../../static/css/main.css" AnchorPane.leftAnchor="48.0" />
-          <Button contentDisplay="CENTER" layoutX="438.0" layoutY="102.0" mnemonicParsing="false" onAction="#handleHocSinh" prefHeight="421.0" prefWidth="316.0" stylesheets="@../../static/css/main.css" />
-      <ImageView fitHeight="314.0" fitWidth="328.0" layoutX="49.0" layoutY="157.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="49.0">
-         <image>
-            <Image url="@../../static/img/child.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="315.0" fitWidth="490.0" layoutX="438.0" layoutY="157.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../static/img/grad.png" />
-         </image>
-      </ImageView>
+          <Button layoutX="48.0" layoutY="102.0" mnemonicParsing="false" onAction="#handleThieuNhi" prefHeight="421.0" prefWidth="316.0" stylesheets="@../../static/css/main.css" AnchorPane.leftAnchor="48.0">
+         <graphic>
+            <ImageView fitHeight="314.0" fitWidth="328.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../static/img/child.png" />
+               </image>
+            </ImageView>
+         </graphic></Button>
+          <Button contentDisplay="CENTER" layoutX="438.0" layoutY="102.0" mnemonicParsing="false" onAction="#handleHocSinh" prefHeight="421.0" prefWidth="316.0" stylesheets="@../../static/css/main.css">
+         <graphic>
+            <ImageView fitHeight="315.0" fitWidth="490.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../static/img/grad.png" />
+               </image>
+            </ImageView>
+         </graphic></Button>
     </children>
 </AnchorPane>
