--- a/src/views/phatqua/hocsinh/HocSinh.fxml
+++ b/src/views/phatqua/hocsinh/HocSinh.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -13,42 +14,56 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="651.0" prefWidth="818.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.HocSinhController">
     <children>
-        <GridPane layoutX="10.0" layoutY="1.0" prefHeight="651.0" prefWidth="782.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+        <GridPane layoutX="10.0" layoutY="1.0" prefHeight="651.0" prefWidth="782.0" vgap="20.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints maxHeight="177.0" minHeight="10.0" prefHeight="63.2" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="536.3999862670898" minHeight="10.0" prefHeight="528.8" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="177.0" minHeight="10.0" prefHeight="51.40000839233399" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="177.0" minHeight="3.800006103515628" prefHeight="16.199991607666007" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="546.1999938964843" minHeight="10.0" prefHeight="531.8" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <HBox alignment="CENTER_LEFT" prefHeight="99.0" prefWidth="779.0" spacing="10.0">
+                <HBox alignment="CENTER_LEFT" prefHeight="99.0" prefWidth="779.0" spacing="20.0">
                     <children>
                   <ComboBox fx:id="namHocSinh" prefHeight="42.0" prefWidth="94.0" promptText="Năm" styleClass="search" stylesheets="@../../../static/css/main.css" />
                         <ComboBox fx:id="dipHocSinh" prefHeight="42.0" prefWidth="198.0" promptText="Thành tích" style="-fx-border-color: black; -fx-background-color: #ffffff;" styleClass="search" stylesheets="@../../../static/css/main.css" />
-                        <Button mnemonicParsing="false" prefHeight="42.0" prefWidth="113.0" styleClass="small_button" stylesheets="@../../../static/css/main.css" text="Tra cứu" textFill="WHITE">
-                            <font>
-                                <Font size="14.0" />
-                            </font>
-                        </Button>
                         <Button mnemonicParsing="false" prefHeight="42.0" prefWidth="106.0" styleClass="small_button" stylesheets="@../../../static/css/main.css" text="Phát quà" textFill="WHITE">
                             <font>
                                 <Font size="14.0" />
                             </font>
                         </Button>
-                  <Button mnemonicParsing="false" prefHeight="42.0" prefWidth="142.0" styleClass="small_button" stylesheets="@../../../static/css/main.css" text="Thống kê" textFill="WHITE">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Button>
                   <Button mnemonicParsing="false" prefHeight="42.0" prefWidth="79.0" styleClass="small_button" stylesheets="@../../../static/css/main.css" text="Undo" textFill="WHITE">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Button>
+                  <Button mnemonicParsing="false" prefHeight="42.0" prefWidth="142.0" styleClass="small_button" stylesheets="@../../../static/css/main.css" text="Chi tiết" textFill="WHITE">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" prefHeight="42.0" prefWidth="116.0" styleClass="small_button" stylesheets="@../../../static/css/main.css" text="Thêm mới" textFill="WHITE">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Button>
                     </children>
                 </HBox>
-            <TableView prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="20.0" GridPane.rowIndex="1">
+               <children>
+                  <TextField fx:id="textSearchTen" prefHeight="47.0" prefWidth="239.0" promptText="Họ và tên" style="-fx-border-color: black;" styleClass="search" stylesheets="@../../../static/css/main.css" />
+                  <TextField fx:id="textSearchGioiTinh" prefHeight="47.0" prefWidth="116.0" promptText="Giới tính" style="-fx-border-color: black;" styleClass="search" stylesheets="@../../../static/css/main.css" />
+                  <TextField fx:id="textSearchTuoi" prefHeight="47.0" prefWidth="83.0" promptText="Tuổi" style="-fx-border-color: black;" styleClass="search" stylesheets="@../../../static/css/main.css" />
+                  <TextField fx:id="textSearchChuHo" prefHeight="47.0" prefWidth="202.0" promptText="Tên chủ hộ" style="-fx-border-color: black;" styleClass="search" stylesheets="@../../../static/css/main.css" />
+                  <Button mnemonicParsing="false" prefHeight="42.0" prefWidth="113.0" styleClass="small_button" stylesheets="@../../../static/css/main.css" text="Tra cứu" textFill="WHITE">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Button>
+               </children>
+            </HBox>
+            <TableView prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
               <columns>
                 <TableColumn prefWidth="75.0" text="Mã học sinh" />
                 <TableColumn prefWidth="131.20001220703125" text="Họ và tên" />
