--- a/src/views/phatqua/thieunhi/ThieuNhi.fxml
+++ b/src/views/phatqua/thieunhi/ThieuNhi.fxml
@@ -26,24 +26,24 @@
             <children>
                 <HBox alignment="CENTER_LEFT" prefHeight="102.0" prefWidth="782.0" spacing="20.0">
                     <children>
-                  <ComboBox fx:id="namThieuNhi" prefHeight="42.0" prefWidth="94.0" promptText="Năm" styleClass="search" stylesheets="@../../../static/css/main.css" />
-                        <ComboBox fx:id="dipThieuNhi" prefHeight="42.0" prefWidth="198.0" promptText="Dịp đặc biệt" styleClass="search" stylesheets="@../../../static/css/main.css" />
-                        <Button mnemonicParsing="false" prefHeight="42.0" prefWidth="106.0" styleClass="small_button" stylesheets="@../../../static/css/main.css" text="Phát quà" textFill="WHITE">
+                  <ComboBox fx:id="chonNam" prefHeight="42.0" prefWidth="94.0" promptText="Năm" styleClass="search" stylesheets="@../../../static/css/main.css" />
+                        <ComboBox fx:id="chonDip" prefHeight="42.0" prefWidth="198.0" promptText="Dịp đặc biệt" styleClass="search" stylesheets="@../../../static/css/main.css" />
+                        <Button mnemonicParsing="false" onAction="#phatQua" prefHeight="42.0" prefWidth="106.0" styleClass="small_button" stylesheets="@../../../static/css/main.css" text="Phát quà" textFill="WHITE">
                             <font>
                                 <Font size="18.0" />
                             </font>
                         </Button>
-                  <Button mnemonicParsing="false" prefHeight="42.0" prefWidth="79.0" styleClass="small_button" stylesheets="@../../../static/css/main.css" text="Undo" textFill="WHITE">
+                  <Button mnemonicParsing="false" onAction="#hoanTac" prefHeight="42.0" prefWidth="79.0" styleClass="small_button" stylesheets="@../../../static/css/main.css" text="Undo" textFill="WHITE">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="42.0" prefWidth="110.0" styleClass="small_button" stylesheets="@../../../static/css/main.css" text="Chi tiết" textFill="WHITE">
+                  <Button mnemonicParsing="false" onAction="#xemThongTin" prefHeight="42.0" prefWidth="110.0" styleClass="small_button" stylesheets="@../../../static/css/main.css" text="Chi tiết" textFill="WHITE">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="42.0" prefWidth="116.0" styleClass="small_button" stylesheets="@../../../static/css/main.css" text="Thêm mới" textFill="WHITE">
+                  <Button mnemonicParsing="false" onAction="#themGoiQua" prefHeight="42.0" prefWidth="116.0" styleClass="small_button" stylesheets="@../../../static/css/main.css" text="Thêm mới" textFill="WHITE">
                      <font>
                         <Font size="18.0" />
                      </font>
@@ -56,17 +56,17 @@
                 <TableColumn minWidth="0.0" prefWidth="87.19999694824219" text="Giới tính" />
                   <TableColumn prefWidth="137.5999755859375" text="Ngày sinh" />
                   <TableColumn prefWidth="68.79998779296875" text="Tuổi" />
-                  <TableColumn prefWidth="121.5999755859375" text="Con chủ hộ" />
+                  <TableColumn prefWidth="121.5999755859375" text="Tên chủ hộ" />
                   <TableColumn prefWidth="195.2000732421875" text="Địa chỉ" />
               </columns>
             </TableView>
             <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="20.0" GridPane.rowIndex="1">
                <children>
-                  <TextField fx:id="textSearchTen" prefHeight="47.0" prefWidth="210.0" promptText="Họ và tên" style="-fx-border-color: black;" styleClass="search" stylesheets="@../../../static/css/main.css" />
-                  <TextField fx:id="textSearchGioiTinh" prefHeight="47.0" prefWidth="114.0" promptText="Giới tính" style="-fx-border-color: black;" styleClass="search" stylesheets="@../../../static/css/main.css" />
-                  <TextField fx:id="textSearchTuoi" prefHeight="47.0" prefWidth="67.0" promptText="Tuổi" style="-fx-border-color: black;" styleClass="search" stylesheets="@../../../static/css/main.css" />
-                  <TextField fx:id="textSearchChuHo" prefHeight="47.0" prefWidth="210.0" promptText="Tên chủ hộ" style="-fx-border-color: black;" styleClass="search" stylesheets="@../../../static/css/main.css" />
-                  <Button mnemonicParsing="false" prefHeight="42.0" prefWidth="113.0" styleClass="small_button" stylesheets="@../../../static/css/main.css" text="Tra cứu" textFill="WHITE">
+                  <TextField fx:id="timTextTen" prefHeight="47.0" prefWidth="210.0" promptText="Họ và tên" style="-fx-border-color: black;" styleClass="search" stylesheets="@../../../static/css/main.css" />
+                  <TextField fx:id="timTextGioiTinh" prefHeight="47.0" prefWidth="114.0" promptText="Giới tính" style="-fx-border-color: black;" styleClass="search" stylesheets="@../../../static/css/main.css" />
+                  <TextField fx:id="timTextTuoi" prefHeight="47.0" prefWidth="67.0" promptText="Tuổi" style="-fx-border-color: black;" styleClass="search" stylesheets="@../../../static/css/main.css" />
+                  <TextField fx:id="timTextChuHo" prefHeight="47.0" prefWidth="210.0" promptText="Tên chủ hộ" style="-fx-border-color: black;" styleClass="search" stylesheets="@../../../static/css/main.css" />
+                  <Button mnemonicParsing="false" onAction="#timKiem" prefHeight="42.0" prefWidth="113.0" styleClass="small_button" stylesheets="@../../../static/css/main.css" text="Tra cứu" textFill="WHITE">
                      <font>
                         <Font size="18.0" />
                      </font>
