--- a/src/views/phatqua/thieunhi/ThongTinQuaTN.fxml
+++ b/src/views/phatqua/thieunhi/ThongTinQuaTN.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="355.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ThieuNhi.ThemQuaThieuNhiController">
+<AnchorPane prefHeight="355.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.thieunhi.ThemQuaThieuNhiController">
    <children>
       <Button layoutX="454.0" layoutY="300.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="116.0" styleClass="small_button" stylesheets="@../../../static/css/main.css" text="Thêm mới" textFill="WHITE">
          <font>
